src/objects/ADvendio__Ad_price__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Tick the check box to activate this ad price.</description>
        <inlineHelpText>Tick the check box to activate this ad price.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Ad_Spec__c</fullName>
        <description>This reference displays the ad spec to which this price is assigned.</description>
        <inlineHelpText>This reference displays the ad spec to which this price is assigned.</inlineHelpText>
        <label>Ad Spec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>Ad Prices</relationshipLabel>
        <relationshipName>Ad_prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgofExport__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this checkbox is true this AdPrice will be included in the AGOF Connect Export.</description>
        <inlineHelpText>If this checkbox is true this AdPrice will be included in the AGOF Connect Export.</inlineHelpText>
        <label>AGOF Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Billing_Category__c</fullName>
        <description>Enter the billing category for this price.</description>
        <inlineHelpText>Enter the billing category for this price.</inlineHelpText>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPO</fullName>
                </value>
                <value>
                    <fullName>CPW</fullName>
                </value>
                <value>
                    <fullName>CPMo</fullName>
                </value>
                <value>
                    <fullName>CPY</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ConstantQuantity__c</fullName>
        <description>This field defines if the Booking Calendar should count the Quantity, Guaranteed AI, Runtime Campaign Item or the Frequency. If this field is not defined, the default value is &quot;Quantity&quot;. You will find more information in our Knowledge Base.</description>
        <label>Constant Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frequency</fullName>
                </value>
                <value>
                    <fullName>Guaranteed AI</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__DisabledTargetings__c</fullName>
        <label>Disabled Targetings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>notargeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__EffectiveMaximumApplicabilityUnit__c</fullName>
        <description>Shows which Maximum Applicability Unit is used in the Booking Calendar. If the unit is not defined at the Ad Price, the value from the Ad Spec is taken.</description>
        <formula>if (isBlank(text(ADvendio__MaximumApplicabilityUnit__c)), text(ADvendio__Ad_Spec__r.ADvendio__MaximumApplicabilityUnit__c), text(ADvendio__MaximumApplicabilityUnit__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows which Maximum Applicability Unit is used in the Booking Calendar. If the unit is not defined at the Ad Price, the value from the Ad Spec is taken.</inlineHelpText>
        <label>Effective Maximum Applicability Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__EffectiveMaximumApplicability__c</fullName>
        <formula>if (ISBLANK(ADvendio__MaximumApplicability__c), ADvendio__Ad_Spec__r.ADvendio__MaximumApplicability__c, ADvendio__MaximumApplicability__c)</formula>
        <inlineHelpText>This contains:
* AdPrice.MaximumApplicability__c if its value is not null
* AdPrice.AdSpec.MaximumApplicability__c otherwise</inlineHelpText>
        <label>Effective Maximum Applicability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Exclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox marks an Ad Price as exclusive.</description>
        <inlineHelpText>This checkbox marks an Ad Price as exclusive.</inlineHelpText>
        <label>Exclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__List_price__c</fullName>
        <description>Enter the list price assigned to the chosen billing category.</description>
        <inlineHelpText>Enter the list price assigned to the chosen billing category.</inlineHelpText>
        <label>List price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__LongDescription__c</fullName>
        <description>Enter a long / full description for this Ad Price.</description>
        <inlineHelpText>Enter a long / full description for this Ad Price.</inlineHelpText>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaximumApplicabilityUnit__c</fullName>
        <description>This field defines for which Time Column the Ad Price is displayed in the Booking Calendar.</description>
        <inlineHelpText>This field is used to define if the Maximum Applicability should be used for days, weeks or months.</inlineHelpText>
        <label>Maximum Applicability Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                    <default>true</default>
                    <label>Day</label>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MaximumApplicability__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Define how often this AdPrice can be used in a CampaignItem at the same time. (Used in the PositionChart)</description>
        <label>Maximum Applicability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__OVKBillingCategory__c</fullName>
        <description>Field used for AGOF Interface - Sets the OVK Billing category to fixed price or allin based on the Advendio billing category.</description>
        <formula>CASE (TEXT(ADvendio__Billing_Category__c),
  &quot;Fixed Price&quot;, &quot;allin&quot;,
  &quot;vCPM&quot;, &quot;CPM&quot;,
  TEXT(ADvendio__Billing_Category__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sets the OVK Billing category to fixed price or allin based on the Advendio billing category.</inlineHelpText>
        <label>OVK Billing Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PacketComponentOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Define if an Ad Price is just selectable within packets or also as a standalone Ad Spec.</description>
        <inlineHelpText>Define if an Ad Price is just selectable within packets or also as a standalone Ad Spec.</inlineHelpText>
        <label>Packet Component Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__PriceUnit__c</fullName>
        <description>Select the relevant unit. In case of Print Uses Cases and using Rebate in Kind Quantity must also filled the fille the Field ADendio__PageEquivalency__c 
Values from Field ADendio__PageEquivalency__c at Commitment Conditions will matched with values from Field:ADvendio__PageEquivalency__c at Object AdType. E.g. 1.0 for 1/1 or 0,5 for 1/2 will be Rebate in Kind Quantity this values have to be used also in AdTypes.</description>
        <inlineHelpText>Select the relevant unit.</inlineHelpText>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Pricelist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Rate Card which is assigned to this Ad Price. A position can only be added to a Media Campaign, if it has been assigned to the same Rate Card.</inlineHelpText>
        <label>Rate Card</label>
        <referenceTo>ADvendio__Pricelist__c</referenceTo>
        <relationshipLabel>Ad Prices</relationshipLabel>
        <relationshipName>Ad_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateCriterion__c</fullName>
        <description>Can be used to filter by adPrices by this field in the SelectSearch page</description>
        <label>Rate Criterion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>bis 5 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 6 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 7 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 10 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 15 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 20 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 25 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 30 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 35 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 40 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 45 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 50 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 55 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 60 Sekunden</fullName>
                </value>
                <value>
                    <fullName>bis 70 Sekunden</fullName>
                </value>
                <value>
                    <fullName>mit Seiteneinfärbung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ShortDescription__c</fullName>
        <description>Enter a short description for this Ad Price. The text will be shown on the media search results page. If omitted, short description of Ad Spec will be shown on the media search results page.</description>
        <inlineHelpText>Enter a short description for this Ad Price. The text will be shown on the media search results page. If omitted, short description of Ad Spec will be shown on the media search results page.</inlineHelpText>
        <label>Short Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this ad price.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this ad price.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__Unit__c</fullName>
        <inlineHelpText>Das Feld Unit/Einheit hat eher einen Print Hintergrund, um hier Informationen wie zum Beispiel &quot;Gramm&quot; zu hinterlegen. Da keine Funktion hier dran hängt, für 71M ausblenden.</inlineHelpText>
        <label>Unit (deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Second</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Valid_from__c</fullName>
        <label>Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Valid_to__c</fullName>
        <label>Valid to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MIG_SPEC_PRODIAKEY_PRICE__c</fullName>
        <formula>ADvendio__Ad_Spec__r.MIG_PRODIAKEY_PRICE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MIG_SPEC_PRODIAKEY_PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ADvendio_List_price__c</fullName>
        <formula>Mig_Basispreis__c +  Mig_AufpreisVideolaenge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_ADvendio__List_price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mig_AufpreisVideolaenge__c</fullName>
        <formula>IF(ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.Mig_IsPostroll__c,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 7 Sekunden&apos;), null,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 15 Sekunden&apos;), 0,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 20 Sekunden&apos;), 5,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 25 Sekunden&apos;), 10,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 30 Sekunden&apos;), 15,
null) ) ) ) )
,
IF(ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.Mig_IsSponsoring__c,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 7 Sekunden&apos;), 0,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 15 Sekunden&apos;), null,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 20 Sekunden&apos;), null,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 25 Sekunden&apos;), null,
    IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 30 Sekunden&apos;), null,
null) ) ) ) )
,
   IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 15 Sekunden&apos;), 0,
   IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 20 Sekunden&apos;), 5,
   IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 25 Sekunden&apos;), 10,
   IF(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 30 Sekunden&apos;), 15,
null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_AufpreisVideolaenge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mig_Basispreis_Sekundenaufschlag__c</fullName>
        <formula>IF( ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.SomDig_MediagattungsDifferenzierung__r.Name=&apos;InStream/Video&apos;,
IF(
 OR(
	AND(
    CONTAINS(ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.ADvendio__Product_search_Name__c, &apos;Post&apos;),
    NOT(ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 7 Sekunden&apos;))
    ),
	AND(
    CONTAINS(ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.ADvendio__Product_search_Name__c, &apos;Sponsoring&apos;),
    ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 7 Sekunden&apos;)
    )
  )
    ,0,
 IF( ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 20 Sekunden&apos;) , 5,
 IF( ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 25 Sekunden&apos;) , 10,
 IF( ISPICKVAL(ADvendio__RateCriterion__c, &apos;bis 30 Sekunden&apos;) , 15,
    0)))) ,
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_Basispreis_Sekundenaufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mig_Basispreis__c</fullName>
        <description>Übernahme des Basispreises aus ProDia</description>
        <label>Mig_Basispreis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mig_BookingPosition__c</fullName>
        <label>Mig_BookingPosition</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mig_CountCampItems__c</fullName>
        <label>Mig_CountCampItems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mig_Info__c</fullName>
        <description>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden
NOT_CHANGED: in ProDia und SF identisch, kein Update</description>
        <inlineHelpText>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden
NOT_CHANGED: in ProDia und SF identisch, kein Update</inlineHelpText>
        <label>Migration_Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_IstMoi__c</fullName>
        <formula>NOT(ADvendio__Ad_Spec__r.SomDig_AbrechnungLeistungsevaluiert__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_IstMoi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_MgDifferenzierungsName__c</fullName>
        <formula>ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.SomDig_MediagattungsDifferenzierung__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_MgDifferenzierungsName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey_Ad_Specs__c</fullName>
        <formula>ADvendio__Ad_Spec__r.Mig_ProdiaKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_ProdiaKey_Ad_Specs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey_ForPrice_Spec__c</fullName>
        <formula>ADvendio__Ad_Spec__r.MIG_PRODIAKEY_PRICE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_ProdiaKey_ForPrice_Spec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</description>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</inlineHelpText>
        <label>Mig_ProdiaKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_VAbfrage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mig_VAbfrage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_AbrechnungFestplatzierung__c</fullName>
        <description>Gibt TRUE zurück, falls die Abrechnungsart CPD, CPW oder Fixed Price ist.
Wird in den Tab Regeln der neuen Kriteriumseingabemaske verwendet.</description>
        <formula>CASE(ADvendio__Billing_Category__c , &quot;CPD&quot;, 1, &quot;CPW&quot;, 1, &quot;Fixed Price&quot;, 1, 0) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abrechnung als Festplatzierung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Auftragstyp__c</fullName>
        <formula>ADvendio__Pricelist__r.SomDig_AuftragstypId__c</formula>
        <label>Auftragstyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_BtFaehig__c</fullName>
        <formula>ADvendio__Ad_Spec__r.SomDig_BT__c</formula>
        <label>BT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_CpxFaehig__c</fullName>
        <formula>ADvendio__Ad_Spec__r.ADvendio__Placement__r.SomDig_CpxFaehig__c</formula>
        <label>CPX fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_FcFaehig__c</fullName>
        <formula>ADvendio__Ad_Spec__r.SomDig_FC__c</formula>
        <label>FC fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_GeoTargetingUnterbunden__c</fullName>
        <formula>NOT(ADvendio__Ad_Spec__r.SomDig_GtFaehig__c)
||
ISBLANK(ADvendio__Ad_Spec__r.SomDig_Targetingaufschlag__c)</formula>
        <label>Geo Targeting unterbunden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_GtFaehig__c</fullName>
        <formula>ADvendio__Ad_Spec__r.SomDig_GtFaehig__c</formula>
        <label>GT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_KEM_PriceEdit__c</fullName>
        <description>Überprüft, ob Preise/TKP bearbeitbar sein sollen
Wird in Kriterieneingabemaske verwendet.</description>
        <formula>OR (
ADvendio__Pricelist__r.SomDig_AuftragstypId__r.Name = &quot;AdAudience&quot;,
ADvendio__Pricelist__r.SomDig_AuftragstypId__r.Name =  &quot;Performance&quot;,
ADvendio__List_price__c = 0.0010,
$Profile.Name = &apos;SomDig_Billing&apos;,
$Permission.SomDig_VerkaufspreisManuellBeschreiben  
)</formula>
        <label>Verkaufspreis bearbeitbar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_KeyValueTargetingUnterbunden__c</fullName>
        <formula>ISBLANK(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c)
||
(
  INCLUDES(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c, &apos;Rotationsausschluss&apos;)
  &amp;&amp;
  ISBLANK(ADvendio__Ad_Spec__r.SomDig_RotationExclusionSurcharge__c)
)
||
(
  (
    INCLUDES(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c, &apos;Autosites&apos;) ||
    INCLUDES(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c, &apos;Bundesliga&apos;) ||
    INCLUDES(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c, &apos;Gesundheit.de&apos;) ||
    INCLUDES(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c, &apos;ICQ&apos;) ||
    INCLUDES(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c, &apos;lokalisten&apos;) ||
    INCLUDES(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c, &apos;nugg.ad&apos;) ||
    INCLUDES(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c, &apos;nugg.ad Studio71&apos;) ||
    INCLUDES(ADvendio__Ad_Spec__r.SomDig_Targeting_Provider__c, &apos;wetter.com&apos;)
  )
  &amp;&amp;
  ISBLANK(ADvendio__Ad_Spec__r.SomDig_Targetingaufschlag__c)
)</formula>
        <label>KeyValue Targeting unterbunden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_KontrolleKeyAdpriceAssignment__c</fullName>
        <description>Sum-RollUp auf AdPrice ob Datensatz vorhanden und dieses Feld in TabRegel anfragen. Wenn &gt;0, dann Buttons für BehTargeting in Tab der KEM anzeigen, sonst ausblenden. KV 2592</description>
        <inlineHelpText>Sum-RollUp auf AdPrice ob Datensatz vorhanden und dieses Feld in TabRegel anfragen. Wenn &gt;0, dann Buttons für BehTargeting in Tab der KEM anzeigen, sonst ausblenden.</inlineHelpText>
        <label>Kontrolle KeyAdpriceAssignment</label>
        <summaryForeignKey>ADvendio__KeyAdPriceAssignment__c.ADvendio__AdPrice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsDifferenzierung__c</fullName>
        <formula>ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.SomDig_MediagattungsDifferenzierung__c</formula>
        <label>Mediagattungs-Differenzierung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Metabuchungslogik__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metabuchungslogik</label>
        <referenceTo>SomDig_Metabuchungslogik__c</referenceTo>
        <relationshipLabel>Ad Prices</relationshipLabel>
        <relationshipName>Ad_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_MinCPM_Price__c</fullName>
        <description>Mindest-TKP Preis, der einzuhalten ist</description>
        <inlineHelpText>Mindest-TKP Preis, der einzuhalten ist</inlineHelpText>
        <label>Min. CPM Price</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Placement__c</fullName>
        <formula>CASESAFEID(ADvendio__Ad_Spec__r.ADvendio__Placement__c)</formula>
        <label>Placement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_RetargetingFaehig__c</fullName>
        <formula>NOT(ISNULL(ADvendio__Ad_Spec__r.SomDig_RetargetingSurcharge__c))</formula>
        <label>Retargeting fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Rotationstyp__c</fullName>
        <formula>TEXT(ADvendio__Ad_Spec__r.ADvendio__Placement__r.SomDig_Rotationstyp__c)</formula>
        <label>Rotationstyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_TkpFaehig__c</fullName>
        <formula>ADvendio__Ad_Spec__r.ADvendio__Placement__r.SomDig_TkpFaehig__c</formula>
        <label>TKP fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_WbFaehig__c</fullName>
        <formula>ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.SomDig_WbFaehig__c</formula>
        <label>WB fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbeformgruppe__c</fullName>
        <formula>TEXT(ADvendio__Ad_Spec__r.ADvendio__Ad_Type__r.SomDig_Werbeformgruppe__c)</formula>
        <label>Werbeformgruppe</label>
        <type>Text</type>
    </fields>
    <label>Ad Price</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Ad_Spec__c</columns>
        <columns>ADvendio__List_price__c</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>P7S1_IdOld__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Serienjunkies</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Billing_Category__c</columns>
        <columns>ADvendio__List_price__c</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>ADvendio__Ad_Spec__c</columns>
        <columns>ADvendio__Pricelist__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Ad_Spec__c</field>
            <operation>contains</operation>
            <value>Serienjunkies</value>
        </filters>
        <label>Serienjunkies</label>
        <language>de</language>
        <sharedTo>
            <role>Dig_DisplayPublisher</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AP-{0}</displayFormat>
        <label>Ad Price No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>